eng, sync 7589 (#3129)